# glue

./: .gitignore  pyproject.toml
glue/: arguments.py  logging.py
hudi_demo/: app.py  job.py  pyproject.toml
hudi_demo/job_scripts/: create_table.py  upsert_table.py
tests/: test_arguments.py
